Fix z-index and blur

--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,8 @@ aside {
   margin: 20px;
   border: 6px solid #eee;
   border-radius: 4px;
-  position: relative; }
+  position: relative;
+  z-index: 1; }
 
 .search-bar__button {
   border: none;
