--- a/scss/search-bar.scss
+++ b/scss/search-bar.scss
@@ -4,6 +4,7 @@
   border: 6px solid #eee;
   border-radius: 4px;
   position: relative;
+  z-index: 1;
 }
 
 .search-bar__button {
